--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <!-- <div id="gameContainer"> -->
-        <h1>Tic Tac Toe!</h1>
+        <h1>WelCome to Tic Tac Toe!</h1>
         <div id="cellContainer">
             <div class="cell" cellIndex ='0'></div>
             <div class="cell" cellIndex ='1'></div>
